# SlamDunker

./: README.md  README.rst  pyproject.toml
kaggle_notebook/: tweetclassifier.ipynb
notebooks/: detector.ipynb  explore_data.ipynb  validate.ipynb
notebooks/.ipynb_checkpoints/: explore_data-checkpoint.ipynb
site/: app.py  pyproject.toml
site/templates/: index.html
tests/: test_slamdunker.py
