[tool.poetry]
name = "slamdunker"
version = "0.1.0"
description = ""
authors = ["Pieter Tolsma <epieter.tolsma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
