[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["Pieter Tolsma <epieter.tolsma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
numpy = "^1.24.1"
transformers = "^4.25.1"
pandas = "^1.5.2"
Flask = "^2.2.2"
Pillow = "^9.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
